# Stickman-fighting-dual-game-2

./: README.md  pyproject.toml  requirements.txt
src/: game.py  main.py  physics.py  settings.py  stickman draw
src/ai/: ai_controller.py
src/audio/: audio_manager.py
src/entities/: enemy.py  flail.py  katana.py  midnightblade.py  player.py  weapon.py
src/input/: controls.py
src/levels/: level.py
src/ui/: hud.py  menu.py
src/utils/: helpers.py
